# trading-assistant

./: .detect_report.json  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .tmp_scan.json  API_v2_REFERENCE.md  COMPLETED_UPDATE.md  CONTEXT_ENGINEERING.md  DEVELOPMENT_GUIDELINES.md  FUTURE_PLAN.md  INTEGRATION_REPORT_v2.md  LICENSE  PROJECT_PLAN.md  REACT_UPDATE_PLAN.md  README.md  SECURITY.md  SECURITY_PLAN.md  TODAY_SUMMARY.md  USER_GUIDE.md  app.py  audit_report.md  debug_analysis.py  debug_rsi.py  inspect_financials.py  mcp_config.json  plan.md  pyproject.toml  requirements.txt  run.bat  run.py  start.bat  start_web.bat  test_api.py  test_cal.py  test_fdr_search.py  test_full.py  test_integration.py  test_markets.py  test_rsi_fix.py  (+10 more)
.agent/workflows/: architect.md  backend.md  compliance.md  designer.md  devops.md  frontend.md  reviewer.md  science.md  security.md  tester.md  trader.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  secret-scan.yml
config/: settings.yaml
extensions/chrome/: background.js  manifest.json  sidepanel.html  sidepanel.js
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  (+1 more)
scripts/: init-secrets.ps1  init-secrets.sh
src/: config.py  server_mcp.py
tests/: debug_analyze_api.py  test_cli.py  test_data_integrity.py  test_data_source.py  test_extension_logic.py  test_fetch.py  test_logic_compare.py  test_notifications.py
trading_assist/: ai_analysis.py  analysis.py  api.py  cli.py  config.py  data_source.py  main.py  notifications.py  validation.py
(+36 files in other folders)
