[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading_assist"
version = "0.1.0"
description = "Trading Assistant CLI prototype"
authors = [{name = "Trading Assist"}]
dependencies = [
  "click>=8.0",
  "yfinance",
  "pandas",
  "tradingeconomics",
  "finnhub-python",
]

[project.scripts]
trading-assist = "trading_assist.cli:main"

[tool.setuptools]
packages = ["trading_assist"]
